@@ -88,7 +88,6 @@ EOF
 
 . libraries/gui.sh
 
-find_dialog
 dialog_msgbox "Welcome" "$WELCOME_TEXT"
 
 AVAILABLE_LANGUAGE_PACKS=`apt-cache pkgnames language-support | cut -d'-' -f3 | sort`
